--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     }
     header h1 {
       margin: 0;
-      font-size: 2.8em;
+      font-size: 2.6em;
     }
     main {
       padding: 40px 20px;
@@ -31,12 +31,12 @@
       text-align: center;
     }
     main h2 {
-      font-size: 1.8em;
+      font-size: 1.6em;
       margin-bottom: 20px;
     }
     main p {
       font-size: 1.2em;
-      line-height: 1.6em;
+      line-height: 1.7em;
     }
     a.button {
       display: inline-block;
@@ -47,6 +47,15 @@
       text-decoration: none;
       font-size: 1em;
       border-radius: 8px;
+    }
+    .social {
+      margin-top: 40px;
+    }
+    .social a {
+      margin: 0 10px;
+      color: #007bff;
+      font-weight: bold;
+      text-decoration: none;
     }
     footer {
       background-color: #f4f4f4;
@@ -65,9 +74,16 @@
   </header>
   <main>
     <h2>💫 احتفظ بذكرياتك إلى الأبد</h2>
-    <p>منصّة تعتمد على الذكاء الاصطناعي لتوثيق الذكريات بالصوت والصورة والفيديو وتخزينها على البلوكشين</p>
-    <p>ارفع صورة، أو سجّل رسالة، أو اكتب كلماتك الأخيرة… وسيتم تحويلها إلى فيديو تذكاري خالد</p>
+    <p>منصّة توثيق الذكريات بالصوت والصورة والفيديو، مدعومة بالذكاء الاصطناعي ومحمية بتقنية البلوكشين</p>
+    <p>ارفع صورة، أو سجّل رسالة، أو اكتب كلماتك الأخيرة… وسيتم تحويلها إلى فيديو تذكاري خالد 🔗</p>
     <a class="button" href="https://forms.gle/T7vwzGV5wrStRMbB9" target="_blank">ابدأ الآن</a>
+
+    <div class="social">
+      <p>تابعنا على المنصات:</p>
+      <a href="https://www.instagram.com" target="_blank">Instagram</a> |
+      <a href="https://www.facebook.com" target="_blank">Facebook</a> |
+      <a href="https://www.tiktok.com" target="_blank">TikTok</a>
+    </div>
   </main>
   <footer>
     © 2025 Zakraty Eternal – Founded by Ahmed Mohamed Megahed Rayan<br />
